check.sh: Add java option so that TLC still works with Java 10
TLA+ tools bug to be subsequently fixed.

Signed-off-by: Catalin Marinas <catalin.marinas@arm.com>