@@ -5,7 +5,7 @@ shopt -s expand_aliases
 
 export CLASSPATH=~/tla
 
-alias tlc="java tlc2.TLC"
+alias tlc="java --add-modules=java.activation tlc2.TLC"
 alias tla2sany="java tla2sany.SANY"
 alias pcal="java pcal.trans"
 alias tla2tex="java tla2tex.TLA"
